tdf#146007: make sure to not hold solar mutex

COM might need to forward the call to another thread (with corresponding
apartment); if that thread happens to wait for solar mutex, COM call may
deadlock.

Change-Id: I8fcf04619cd29b678fd7ade87254b9aad2f639a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133853
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>